<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/screen_background">

   <Button
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="34sp"
        android:background="@drawable/sideeffects_button_shape"
        android:layout_alignParentLeft = "true"
        android:text="back"
        android:textColor="@color/screen_background" 
        android:layout_marginBottom="10sp"
        android:layout_marginTop="10sp"
        android:layout_marginLeft="10sp"       
        android:textSize="20sp"
        android:typeface="sans"       
        android:textStyle="bold"
        
    />
 
    
 	<AutoCompleteTextView 
    	android:id="@+id/autocomplete_symptoms"
    	android:layout_width="fill_parent"
    	android:layout_height="40sp"
    	android:hint="@string/enter_sideeffect"
    	android:inputType="text"
    	android:textSize="20sp"
        android:typeface="sans"
        android:layout_marginLeft="8sp"
        android:layout_marginRight="8sp"
        android:layout_marginTop="10sp"             
        android:background="@drawable/autocomplete_shape"
        android:layout_below="@id/back_button"        
    	android:imeOptions="actionNext" />
 	
 	<Button
	    android:id="@+id/autocomplete_symptoms_delete_button"
	    android:layout_width="30sp"
	    android:layout_height="40sp"
        android:layout_alignParentRight="true"
        android:text="X"
        android:textColor="@color/screen_background" 
        android:textSize="18sp"
        android:typeface="sans"
        android:layout_marginLeft="8sp"
        android:layout_marginRight="8sp" 
        android:layout_marginTop="10sp"  
        android:layout_below="@id/back_button"                    
        android:background="@drawable/autocomplete_delete_button" />
	
  	
 	<TextView
        android:id="@+id/which_medications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="8sp"
        android:paddingRight="10sp"
        android:text="@string/which_medications"
        android:textSize="20sp"
        android:layout_centerHorizontal = "true"
        android:layout_marginTop="15sp"
        android:layout_below="@id/autocomplete_symptoms"
        android:visibility="invisible" 
        
     />
 	
    <!-- Scrolling List of Medications and Side Effect Frequencies -->

   <ListView
        android:id="@+id/frequency_medication_list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:listSelector="@android:color/transparent"
        android:paddingLeft="4sp"
        android:paddingRight="4sp"
        android:paddingTop="1sp"
        android:layout_marginLeft="8sp"
        android:layout_marginRight="8sp"
        android:layout_marginTop="10sp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:typeface="sans"        
        android:background="@color/med_list_background"
        android:layout_below="@id/which_medications"
        android:divider="@color/screen_background"
        android:dividerHeight="1sp"
        android:visibility="invisible"
    />
   
   	<ProgressBar android:indeterminate="true"
         android:layout_width="50dp" android:layout_height="50dp"
         android:id="@+id/symptoms" style="?android:attr/progressBarStyle"
         android:gravity="center_vertical|center_horizontal"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
         android:visibility="invisible"
    />


	<Button
		android:id="@+id/send_to_doctor"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:background="@drawable/sideeffects_button_shape"
		android:layout_centerHorizontal = "true"
		android:text="@string/send_to_doctor_button"
		android:textColor="@color/screen_background"
		android:layout_marginBottom="10sp"
		android:layout_marginTop="20sp"
		android:layout_marginLeft="8sp"
		android:layout_marginRight="8sp"
		android:paddingLeft="10sp"
		android:paddingRight="10sp"
		android:textSize="22sp"
		android:typeface="sans"
		android:textStyle="normal"
		android:layout_alignParentBottom="true"
		/>

   
   
 
      


 	
</RelativeLayout>
